fix tables overflowing in webkit

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -535,10 +535,6 @@ button {
   }
 }
 
-:disabled {
-  cursor: default;
-}
-
 .button-group {
   display: flex;
   flex-wrap: wrap;
@@ -676,7 +672,7 @@ input {
 }
 
 .visuallyhidden {
-  position: absolute;
+  position: fixed;
   z-index: -1;
   width: 1px;
   height: 1px;
